--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root" class="h-screen"></div>
+    <div id="root" class="h-screen md:flex"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
