--- a/client/index.html
+++ b/client/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/title.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <title>Vite + React</title>
+    <title>Al-Twit</title>
   </head>
   <body>
     <div id="root" class="h-screen md:flex"></div>
